# hesperides_final_exam

./: .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
code/: __init__.py
code/apps/: __init__.py
code/apps/time_series_model/configs/: time_series_model.yaml
code/modules/: __init__.py
code/modules/stages/data/: yahoo_finance_etl.py
code/modules/stages/transforms/: time_series_xy_split.py
data/: .gitkeep
models/: .gitkeep
scripts/: build_project.sh
specs/: hesperides_final_exam-backlog.md  hesperides_final_exam-context.md
tests/integration/: .gitkeep
tests/unit/: .gitkeep
